--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.tic-tac-toe {
+  width: 500px;
+  margin: auto;
+  border: 3px solid #3d4250;
+}
+
+.board {
+  display: grid;
+  grid-gap: 2px;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+
+.square {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  background-color: #78bec5;
+  color: #fff;
+  font-size: 80px;
+  line-height: 100px;
+  text-align: center;
+  overflow: hidden;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+}
+
+.empty:hover {
+  background-color: #3d4250 !important;
+}
+
+.player-1 {
+  background-color: #dc685a;
+  cursor: not-allowed;
+}
+
+.player-2 {
+  background-color: #ecaf4f;
+  cursor: not-allowed;
+}
+
+.btn {
+  border: none;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.btn-primary {
+  background-color: blue;
+  color: #fff;
+  opacity: 0.7;
+}
+
+.btn-primary:hover {
+  opacity: 1;
+}
+
+label {
+  font-weight: 800;
+  width: 200px;
+  display: inline-block;
+  text-align: right;
+  margin-right: 40px;
+}
+
+.stats {
+  border-bottom: 3px solid #78bec5;
+  padding: 10px;
+}
+
+.stats div {
+  margin-bottom: 10px;
+}
+
+.toolbar {
+  margin: 10px auto;
+  padding: 20px;
+  text-align: center;
+  border-top: 3px solid #78bec5;
 }
