--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   padding: 10px;
   margin: 10px;
   border-radius: 10px;
-  background-color: #78bec5;
+  background-color: #6ab7be;
   color: #fff;
   font-size: 80px;
   line-height: 100px;
