--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,43 @@
 body {
   font-family: Arial;
+  margin: 0;
+  padding: 0;
 }
 
 .tic-tac-toe {
   width: 500px;
-  margin: auto;
-  border: 3px solid #3d4250;
+  margin: 20px auto;
+  border: 3px solid #eee;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .board {
   display: grid;
-  grid-gap: 2px;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, auto);
+  padding: 10px 20px;
 }
 
 .square {
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  padding: 10px;
-  margin: 10px;
+  height: 0;
+  padding-bottom: 100%;
   border-radius: 10px;
   background-color: #78bec5;
   color: #78bec5;
-  font-size: 80px;
-  line-height: 100px;
+  font-size: 90px;
   text-align: center;
-  overflow: hidden;
   font-weight: bold;
   cursor: pointer;
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.4);
   position: relative;
+}
+
+.square span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
 }
 
 .empty:before {
@@ -57,7 +64,7 @@ body {
 
 .btn {
   border: none;
-  padding: 20px;
+  padding: 10px 20px;
   border-radius: 5px;
 }
 
@@ -80,17 +87,11 @@ label {
 }
 
 .stats {
-  border-bottom: 3px solid #78bec5;
-  padding: 10px;
-}
-
-.stats div {
-  margin-bottom: 10px;
+  padding-top: 10px;
 }
 
 .toolbar {
   margin: 10px auto;
-  padding: 20px;
+  padding: 5px 20px;
   text-align: center;
-  border-top: 3px solid #78bec5;
 }
